# AI-Core-Simulator

./: .gitignore  CMakeLists.txt  README.md  README_ONNXIM.md  requirements.txt  run_auto.sh  run_auto_opt.sh  visualizer_png.py
DOCS/: ADD_NEW_OPERATOR.md  ASCEND_910B_CONFIG_GUIDE.md  ASCEND_PE_CYCLE_ESTIMATION_TOP5_20260324.md  ASIM_FINAL_REPORT.md  ASIM_FRAMEWORK_CYCLE_AND_ASCEND_16CUBE.md  DEEPUNFOLD_CYCLE_TABLE_TOOL.md  DEEPUNFOLD_OPTIMIZATION_AND_COMPARISON_20260323.md  DEEPUNFOLD_RICH_FIGURE_GUIDE_20260323.md  LOW_LEVEL_OPCODE_REFERENCE.md  MMSE_SCALING_BASELINE.md  NEWTON_SCHULZ_OPT_LOG.md  NEWTON_SCHULZ_OP_GUIDE.md  NEWTON_SCHULZ_PINGPONG_REPORT.md  NEWTON_SCHULZ_SCALING_BASELINE.md  ONNXIM_EXPERIMENT_SUMMARY.md  OPERATOR_CYCLE_TABLE_EXPORT_GUIDE.md  OPERATOR_DESIGN_GUIDE.md  PE_MODEL_VALIDATION_NO_MSPROF_20260325.md  SCALAR_MINIMAL_IMPLEMENTATION_REPORT.md  WEEKLY_REPORT_20260331.md
example/: cholesky_noblock_test.json
results/LDL/: README.md  (+17 more)
src/: CMakeLists.txt  Common.h  Core.cc  Simulator.cc  SystolicWS.cc  SystolicWS.h  main.cc
src/models/: CholeskyChainModel.h  CholeskyModel.cc  CholeskyModel.h  CholeskyNoBlockModel.cc  CholeskyNoBlockModel.h  LDLModel.h  LDLNoBlockModel.h  MMSEModel.cc  NewtonSchulzModel.h  NewtonSchulzOptModel.h
src/operations/: CholeskyInvChainOp.cc  CholeskyInvChainOp.h  CholeskyInvNoBlockOp.cc  CholeskyInvNoBlockOp.h  CholeskyInvOp.cc  CholeskyInvOp.h  LDLDecompNoBlockOp.h  LDLDecompOp.cc  LDLDecompOp.h  MMSEOp.cc  MMSEOp.h  NewtonSchulzOp.cc  NewtonSchulzOp.h  NewtonSchulzOptOp.cc  NewtonSchulzOptOp.h  OperationFactory.cc
(+145 files in other folders)
